--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,41 +6,56 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1085</width>
-    <height>787</height>
+    <width>1055</width>
+    <height>769</height>
    </rect>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>800</width>
+    <height>600</height>
+   </size>
+  </property>
+  <property name="acceptDrops">
+   <bool>false</bool>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
+  <layout class="QHBoxLayout" name="horizontalLayout">
+  <item>
    <widget class="QTreeView" name="treeView">
     <property name="geometry">
      <rect>
-      <x>40</x>
-      <y>31</y>
+      <x>20</x>
+      <y>30</y>
       <width>341</width>
       <height>691</height>
      </rect>
     </property>
    </widget>
+   </item>
+   <item>
    <widget class="QTableView" name="tableView">
     <property name="geometry">
      <rect>
-      <x>405</x>
-      <y>31</y>
+      <x>380</x>
+      <y>30</y>
       <width>651</width>
-      <height>681</height>
+      <height>691</height>
      </rect>
     </property>
    </widget>
+   </item>
+  </layout>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1085</width>
+     <width>1055</width>
      <height>22</height>
     </rect>
    </property>
